2011-03-09 Lefteris Zafiris <zaf.000@gmail.com> - 2.1rc3
	Changed output file format to raw signed lineral. This
	adds support for 16kHz sound playback in asterisk 1.6.
	Added checks for text input length.  
	
2011-03-09 Lefteris Zafiris <zaf.000@gmail.com> - 2.1rc2
	Better error handling.
	Using mkstemps() for safer temp file name generation,
	instead of ast_random().
	Using ast_malloc() instead of malloc().
	Increased internal espeak synth buffer to 2sec.

2011-27-08 Lefteris Zafiris <zaf.000@gmail.com> - 2.1rc1
	Switched to libsamplerate for resampling. Resampling
	now is much faster.
	Major code cleanup. 

2011-19-08 Lefteris Zafiris <zaf.000@gmail.com> - 2.0
    Added option for generating 16000Hz sound files.

2009-06-11 Lefteris Zafiris <zaf.000@gmail.com> - 1.6.0.1
	Released as stable.
	Fixed a bug in argument parsing that could
	cause asterisk to crash.
	
2009-02-09 Lefteris Zafiris <zaf.000@gmail.com> - 1.6-0.1-beta
	Initial release 1.6-0.1-beta