@@ -1,3 +1,9 @@
+2011-21-10 Lefteris Zafiris <zaf.000@gmail.com> - 2.1rc4
+	Changed config file handling. Config values are 
+	readed once during module loading. Added option for
+	module reload that re-reads the config values. 
+	Makefile updates.
+
 2011-03-09 Lefteris Zafiris <zaf.000@gmail.com> - 2.1rc3
 	Changed output file format to raw signed lineral. This
 	adds support for 16kHz sound playback in asterisk 1.6.
